Fixing z-index of meep bar

--- a/public/css/meeps.css
+++ b/public/css/meeps.css
@@ -31,6 +31,7 @@
   background: -moz-linear-gradient(100% 100% 90deg, rgba(72, 123, 255, 0.7), rgba(72, 123, 255, 0.3));
   background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(72, 123, 255, 0.3)), to(rgba(72, 123, 255, 0.7)));
   position: absolute;
+  z-index: 2;
   right: 0;
   top: 0;
   bottom: 0;
